libstream-perl (0.5.11) UNRELEASED; urgency=low

  * Stream::File optimized

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 29 Oct 2009 05:24:40 +0300

libstream-perl (0.5.10) unstable; urgency=low

  * Stream::File: lock before writing

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 29 Oct 2009 01:07:35 +0300

libstream-perl (0.5.9) unstable; urgency=low

  * support several colon-separted dirs in STREAM_DIR

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 28 Oct 2009 17:37:39 +0300

libstream-perl (0.5.8) unstable; urgency=low

  * STREAM_DIR env variable
  * STREAM_DIR and STREAM_*_DIR env variables append dirs to search path
  * 'dump' filter fixed

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 27 Oct 2009 21:41:10 +0300

libstream-perl (0.5.7) unstable; urgency=low

  * bugfix: pull next item from underlying stream when filtering using
    Mixin::Filterable

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 17 Sep 2009 17:30:34 +0400

libstream-perl (0.5.6) unstable; urgency=low

  * using Yandex::Version to set versions of most modules

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 10 Sep 2009 19:13:20 +0400

libstream-perl (0.5.5) unstable; urgency=low

  * Stream::FAQ updated and expanded
  * out/null stream

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 10 Sep 2009 18:56:36 +0400

libstream-perl (0.5.4) unstable; urgency=low

  * bugfix: when filter returns undef, next item is pulled from underlying
    stream now

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Sat, 05 Sep 2009 04:00:56 +0400

libstream-perl (0.5.3) unstable; urgency=low

  * more POD for pump function
  * first dependency on Yandex::Logger, sorry, it's too useful

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Fri, 04 Sep 2009 23:30:26 +0400

libstream-perl (0.5.2) unstable; urgency=low
