@@ -1,3 +1,4 @@
 etc/stream/in
 etc/stream/out
 etc/stream/cursor
+var/lib/stream
