@@ -1,0 +1,7 @@
+#!/bin/sh
+
+set -e
+
+dir=/var/lib/stream
+chmod 777 $dir
+chmod +t $dir
