@@ -18,6 +18,7 @@ In future it'll probably contain some logic about safe writing into rotating log
 use Params::Validate qw(:all);
 
 use Stream::File;
+use Digest::MD5 qw(md5_hex);
 use base qw(Stream::File);
 
 =head1 METHODS
@@ -37,6 +38,26 @@ sub stream($$;$) {
     my $self = shift;
     my ($cursor, $unrotate_params) = validate_pos(@_, {isa => 'Stream::Log::Cursor'}, {type => HASHREF, optional => 1});
 
+    return $cursor->stream($self, ($unrotate_params ? $unrotate_params : ()));
+}
+
+=item B<stream_by_name($name)>
+
+=item B<stream_by_name($name, $unrotate_params)>
+
+Construct stream object by name.
+
+Position will be saved in file which guaranteed to be unique for any log+name pair.
+
+C<$unrotate_params> can contain more unrotate options.
+
+=cut
+sub stream_by_name($$;$) {
+    my $self = shift;
+    my ($name, $unrotate_params) = validate_pos(@_, { type => SCALAR }, {type => HASHREF, optional => 1});
+    my $posdir = $ENV{STREAM_LOG_POSDIR} || '/var/lib/stream'; # env variable is neccesary for tests
+    my $posfile = $posdir.'/'.md5_hex($name).'.'.md5_hex($self->file).'.pos';
+    my $cursor = Stream::Log::Cursor->new({ LogFile => $self->file, PosFile => $posfile });
     return $cursor->stream($self, ($unrotate_params ? $unrotate_params : ()));
 }
 
